// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseAuthConfig > should merge defaults with custom router options 1`] = `
{
  "clientId": "test-client-id",
  "clientSecret": "test-client-secret",
  "defaultTokenExpiry": "1d",
  "issuer": "https://issuer.com",
  "refresh": {
    "maxAge": "6m",
    "mode": "none",
  },
  "router": {
    "authorize": {
      "acrValues": null,
      "codeChallengeMethod": "plain",
      "maxAge": null,
      "prompt": null,
      "resource": "https://api.example.com",
      "responseType": "code",
      "scope": [
        "openid",
        "offline_access",
        "email",
        "profile",
      ],
    },
    "cookies": {
      "login": "pylon_login_session",
      "logout": "pylon_logout_session",
    },
    "dynamicRedirectDomains": [
      "https://client.com",
    ],
    "errorRedirect": "/auth/error",
    "pathPrefix": "/auth",
    "resourceKey": "audience",
    "staticRedirect": {
      "login": "https://client.com/login/static",
      "logout": null,
    },
  },
}
`;

exports[`parseAuthConfig > should merge defaults with router options 1`] = `
{
  "clientId": "test-client-id",
  "clientSecret": "test-client-secret",
  "defaultTokenExpiry": "1d",
  "issuer": "https://issuer.com",
  "refresh": {
    "maxAge": "1h",
    "mode": "half_life",
  },
  "router": {
    "authorize": {
      "acrValues": null,
      "codeChallengeMethod": "S256",
      "maxAge": null,
      "prompt": null,
      "resource": null,
      "responseType": "code",
      "scope": [
        "openid",
        "offline_access",
        "email",
        "profile",
      ],
    },
    "cookies": {
      "login": "pylon_login_session",
      "logout": "pylon_logout_session",
    },
    "dynamicRedirectDomains": [],
    "errorRedirect": "/auth/error",
    "pathPrefix": "/auth",
    "resourceKey": "resource",
    "staticRedirect": {
      "login": null,
      "logout": null,
    },
  },
}
`;

exports[`parseAuthConfig > should merge refresh defaults when refresh is partially specified 1`] = `
{
  "clientId": "test-client-id",
  "clientSecret": "test-client-secret",
  "defaultTokenExpiry": "1d",
  "issuer": "https://issuer.com",
  "refresh": {
    "maxAge": "1h",
    "mode": "max_age",
  },
  "router": null,
}
`;

exports[`parseAuthConfig > should return config with null router when no router options 1`] = `
{
  "clientId": "test-client-id",
  "clientSecret": "test-client-secret",
  "defaultTokenExpiry": "1d",
  "issuer": "https://issuer.com",
  "refresh": {
    "maxAge": "1h",
    "mode": "half_life",
  },
  "router": null,
}
`;
